--- a/app/src/main/res/layout/favorite_list_layout.xml
+++ b/app/src/main/res/layout/favorite_list_layout.xml
@@ -63,21 +63,18 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title" />
 
     <TextView
-        android:id="@+id/tv_overview"
+        android:id="@+id/tv_release"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:ellipsize="end"
         android:singleLine="true"
-        android:justificationMode="inter_word"
-        android:text="@string/overview"
+        android:text="@string/tv_release_date"
         android:textAlignment="textStart"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/tv_rating" />
