--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/tmdb_blue"
-    tools:context=".ui.LoginFragment">
+    android:background="@color/tmdb_blue">
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -13,7 +12,7 @@
             android:layout_marginStart="80dp"
             android:layout_marginTop="80dp"
             android:layout_marginEnd="80dp"
-            android:text="@string/tv_login"
+            android:text="@string/login_demo"
             android:textColor="#ffff"
             android:textSize="34sp"
             android:textStyle="bold"
