--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/tmdb_blue"
-    tools:context=".ui.RegisterFragment">
+    android:background="@color/tmdb_blue">
 
     <ImageView
         app:layout_constraintStart_toStartOf="parent"
