--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -51,7 +51,7 @@
             android:autofillHints="name"
             android:backgroundTint="@color/white"
             android:ems="10"
-            android:hint="Name"
+            android:hint="@string/tv_name"
             android:inputType="textPersonName"
             android:text="" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -76,7 +76,7 @@
             android:autofillHints="password"
             android:backgroundTint="@color/white"
             android:ems="10"
-            android:hint="password"
+            android:hint="@string/tv_password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,7 +105,7 @@
             android:backgroundTint="@color/white"
             android:inputType="textEmailAddress"
             android:text=""
-            android:hint="Email" />
+            android:hint="@string/et_email" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -128,7 +128,7 @@
             android:autofillHints="password"
             android:backgroundTint="@color/white"
             android:ems="10"
-            android:hint="password"
+            android:hint="@string/tv_password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -138,7 +138,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/purple_700"
-        android:fontFamily="sans-serif-black"
         android:padding="14dp"
         android:text="Register"
         android:textColor="@color/white"
