--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -6,6 +6,39 @@
     android:layout_height="match_parent"
     android:background="@color/tmdb_blue"
     android:fitsSystemWindows="true">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+        <ImageButton
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/iv_profile"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="end"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:src="@drawable/ic_profile"
+            android:background="@drawable/transparent"
+            android:contentDescription="@string/tv_logo" />
+        <ImageButton
+            app:layout_constraintEnd_toStartOf="@id/iv_profile"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/iv_exit"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="end"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:src="@drawable/ic_exit"
+            android:background="@drawable/transparent"
+            android:contentDescription="@string/tv_logo" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/iv_logo"
